test/files/pos/t10758/Main_2.scala
object Test {
  TwoFaceInt(1) + TwoFaceInt(2)
}
