test/files/neg/plugin-rafter-before-1/testsource.scala
object Test extends Application {
  println("rafter-before-1")
}

